[project]
name = "essentia-rhythm-extractor"
version = "0.2.0"
description = "Thin python wrapper exposing Essentia RhythmExtractor2013 (multifeature)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy==1.26.1",
 "pybind11>=2.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error", "ignore::DeprecationWarning"]

[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.12", "numpy>=1.23"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = [
    "line-profiler>=5.0.0",
    "pyinstrument>=5.1.1",
    "pytest>=8.4.2",
]
cli = ["soxr>=0.3.7", "soundfile>=0.12"]
compare = [
    "essentia==2.1b6.dev1177",
]

[project.optional-dependencies]
cli = ["soxr>=0.3.7", "soundfile>=0.12"]

[project.scripts]
rhythm-extractor = "essentia_rhythm_extractor.cli:main"
[tool.scikit-build]
cmake.verbose = true
# Run setup script before build
build-dir = "build"
# Include only the vendor files that are actually used by CMakeLists.txt
sdist.include = [
    "src/**/*",
    "CMakeLists.txt",
    "version.h.in",
    "scripts/setup-essentia.sh",
    # Note: vendor/essentia/* files are now downloaded during build by setup-essentia.sh
]
